fix disconnecting outlets when leaving the stack

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -2,6 +2,7 @@
 
 
 <nav class="main">
+  {{link-to "home" "index"}}  &rarr;
   {{link-to "one" "one"}}     &rarr;
   {{link-to "two" "two"}}     &rarr;
   {{link-to "three" "three"}}
